<resources>
    <string name="app_name">Restoran</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">Your Cart</string>
    <string name="title_tab_profile">Profile</string>
    <string name="text_title_banner">Makan Bareng?\nTambah Coca-Cola!</string>
    <string name="text_desc_banner">Diskon special hingga 50%</string>
    <string name="text_name">Hari Yang Cerah !</string>
    <string name="text_greeting">Mau makan apa hari ini?</string>
    <string name="text_category">Category</string>
    <string name="text_category1">Nasi</string>
    <string name="text_category2">Bakso</string>
    <string name="text_category3">Sate</string>
    <string name="text_category4">Mie</string>
    <string name="text_category5">Ayam</string>
    <string name="text_listmenu">List Menu Makanan</string>
    <string name="location">Location</string>
    <string name="detail_location">Jl. BSD Green Office Park Jl. BSD Grand Boulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="addition">0</string>
    <string name="grid_mode">Grid Mode</string>
    <string name="add_to_card">Tambah ke Keranjang - Rp. 18.000</string>
    <string name="add_to_string">Tambah ke Keranjang  %1$s</string>
    <string name="total_quantity">%1$s</string>
    <string name="header_profile">Profile</string>
    <string name="hint_name">Nama</string>
    <string name="text_hint_username">Username</string>
    <string name="text_username">refanda.dicky</string>
    <string name="text_hint_email">Email</string>
    <string name="text_email">refandadicky1@gmail.com</string>
    <string name="text_hint_notes">Notes</string>
    <string name="text_delivery_method">Delivery Method</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="shopping_summary">Shopping Summary</string>
    <string name="text_title_your_cart">Your Cart</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_add_to_cart_success">Add to cart Success</string>
    <string name="add_to_cart_failed">Add to cart Failed</string>
    <string name="loading">Loading</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_title_order_confirmation">Order Confirmation</string>
    <string name="back_to_home">Kembali ke Home</string>
    <string name="payment_success">Pembayaran Berhasil</string>
    <string name="Noted">Catatan :</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_et_password">password</string>
    <string name="text_edit_text_password">12345678</string>
    <string name="checkout_error">Checkout Error</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="update_username_failed">Update Username Failed : %1$s</string>
    <string name="success_to_change">Success to Change</string>
</resources>